Fix spacing with home page overlay. (see #707)

--- a/gobotany/static/sass/_home.scss
+++ b/gobotany/static/sass/_home.scss
@@ -101,8 +101,8 @@
 }
 #home #overlay {
     background: rgba(255, 255, 255, 0.8);
-    height: 318px;
-    padding: 15px 30px 0;
+    height: 308px;
+    padding: 25px 30px 0;
     position: absolute;
     left: 646px;
     text-align: center;
